# dat

./: pyproject.toml
dat/: __init__.py  base64_encoder.py  create.py  keys.py  main.py  metadata.py  run.py  sign.py  verify.py  version.py
dat/format/: dat.py  wiki.py  xml.py
dat/xml/: __init__.py
